# TrabalhoFinalTGC_2025-2

./: README.md
AGM/: CMakeLists.txt
AGM/src/: array2d.h  felzenszwalb.cpp  felzenszwalb.h  graph.cpp  graph.h  main.cpp
Aborescencia/: trabalho-segmentacao.sln
Aborescencia/trabalho-segmentacao/: Arborescence.cpp  Arborescence.h  CMakeLists.txt  Edge.h  GraphBuilder.cpp  GraphBuilder.h  Image.cpp  Image.h  MST.cpp  MST.h  Segmenter.cpp  Segmenter.h  main.cpp  stb_image.h  trabalho-segmentacao.vcxproj  trabalho-segmentacao.vcxproj.filters  utils.cpp  utils.h
Aborescencia/trabalho-segmentacao/x64/Debug/: trabalho-segmentacao.exe.recipe  trabalho-segmentacao.ilk  vc143.idb
Aborescencia/trabalho-segmentacao/x64/Debug/trabalho.fc0fd98b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  trabalho-segmentacao.lastbuildstate
